--- a/.atom/styles.less
+++ b/.atom/styles.less
@@ -11,8 +11,7 @@
 
 // style the background and foreground colors on the atom-text-editor-element itself
 atom-text-editor {
-  // color: white;
-  // background-color: hsl(180, 24%, 12%);
+  font-weight: bold;
 }
 
 // style UI elements inside atom-text-editor
