Add redis insight, adjust atom config & styles.

--- a/.atom/styles.less
+++ b/.atom/styles.less
@@ -19,6 +19,26 @@ atom-text-editor .cursor {
   // border-color: red;
 }
 
+atom-text-editor .wrap-guide:nth-of-type(1) {
+  background-color: fadeout(#a5a5a5, 60%);
+  width: 1px;
+}
+
+atom-text-editor .wrap-guide:nth-of-type(2) {
+  background-color: fadeout(green, 60%);
+  width: 2px;
+}
+
+atom-text-editor .wrap-guide:nth-of-type(3) {
+  background-color: fadeout(yellow, 60%);
+  width: 3px;
+}
+
+atom-text-editor .wrap-guide:nth-of-type(4) {
+  background-color: fadeout(red, 60%);
+  width: 4px;
+}
+
 .tab-bar {
   background: #3c3f41;
 }
