Adjust vs and atom color theme.

--- a/.atom/styles.less
+++ b/.atom/styles.less
@@ -110,3 +110,10 @@ atom-text-editor .wrap-guide:nth-of-type(4) {
 .list-tree li.list-nested-item.selected.status-renamed > .list-item {
   color: #93e0e3;
 }
+
+.outline-view .list-tree li.outline-view-item > .list-item > span,
+.outline-view .list-tree li.outline-view-item > span > span:nth-of-type(2),
+.outline-view .list-tree li.outline-view-item.selected > .list-item > span,
+.outline-view .list-tree li.outline-view-item.selected > span > span:nth-of-type(2) {
+  font-weight: 600;
+}
