Adjust added color and use ignored default color.

--- a/.atom/styles.less
+++ b/.atom/styles.less
@@ -68,7 +68,7 @@ atom-text-editor .wrap-guide:nth-of-type(4) {
 
 .list-tree li.list-item.status-added > .name,
 .list-tree li.list-nested-item.status-added > .list-item {
-  color: #704f50;
+  color: #cc9393;
 }
 
 .list-tree li.list-item.selected.status-added > .name,
@@ -76,10 +76,12 @@ atom-text-editor .wrap-guide:nth-of-type(4) {
   color: #dca2a3;
 }
 
+/*
 .list-tree li.list-item.status-ignored > .name,
 .list-tree li.list-nested-item.status-ignored > .list-item {
   color: #506070;
 }
+*/
 
 .list-tree li.list-item.status-modified > .name,
 .list-tree li.list-nested-item.status-modified > .list-item {
